<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_personal_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/color_background_light_pink">


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/top_toolbar" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_above="@+id/bottom_toolbar">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_above="@+id/fullscreen_content_controls">
            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/color_background_pink"
                    android:paddingBottom="@dimen/text_bottom_margin">

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/text_top_margin"
                            app:srcCompat="@drawable/white"
                            android:id="@+id/information_userPortrait"/>
                    <Button
                            android:text="用户名"
                            android:textSize="@dimen/text_size_button_primary"
                            android:textColor="@color/color_text_black"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom|center_horizontal"
                            android:background="@drawable/button_exit"
                            android:id="@+id/userName" android:elevation="0dp"
                            style="@style/Widget.AppCompat.Button.Borderless"/>
                </LinearLayout>
            </FrameLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@color/color_background_white">
                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5">

                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                    android:layout_gravity="center">
                        <TextView
                                android:text="0.00元"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="@dimen/text_top_margin"
                                android:paddingBottom="@dimen/text_bottom_margin"
                                android:id="@+id/remainer"
                                android:textAlignment="center" android:textSize="24sp"
                                android:textColor="@color/color_text_red" android:layout_weight="1"/>
                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="@dimen/text_top_margin"
                                android:paddingBottom="@dimen/text_bottom_margin"
                                android:layout_below="@+id/remainer"
                                android:id="@+id/remainStr"
                                android:layout_weight="1"
                                android:text="@string/remainerStr"
                                android:textAlignment="center" android:textSize="16sp"/>
                    </LinearLayout>
                </FrameLayout>
                <ImageView
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        app:srcCompat="@color/divider_gray"
                        android:id="@+id/divider"/>
                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:gravity="center">

                    <LinearLayout
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        <TextView
                                android:text="0分"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="@dimen/text_top_margin"
                                android:paddingBottom="@dimen/text_bottom_margin"
                                android:id="@+id/points"
                                android:layout_weight="1"
                                android:textAlignment="center" android:textSize="24sp"
                                android:textColor="@android:color/holo_blue_light"/>
                        <TextView
                                android:text="@string/points"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="@dimen/text_top_margin"
                                android:paddingBottom="@dimen/text_bottom_margin"
                                android:id="@+id/pointsStr"
                                android:layout_weight="1"
                                android:textAlignment="center" android:textSize="16sp"/>
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="@dimen/text_left_margin"
                    android:paddingRight="@dimen/text_right_margin"
                    android:background="@color/color_background_white"
                    android:gravity="center_vertical">
                <Button
                        android:text="@string/myorder"
                        android:textSize="@dimen/text_size_button_primary"
                        android:textAlignment="viewStart"
                        android:layout_gravity="start"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/color_background_white"
                        android:id="@+id/order_jump"/>
            </LinearLayout>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:srcCompat="@color/color_background_light_pink"
                    android:id="@+id/line"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/text_left_margin"
                    android:paddingRight="@dimen/text_right_margin"
                    android:background="@color/color_background_white"
                    android:gravity="center_vertical">
                <Button
                        android:text="@string/collect"
                        android:textSize="@dimen/text_size_button_primary"
                        android:textAlignment="viewStart"
                        android:layout_gravity="start"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/color_background_white"
                        android:id="@+id/collect_jump"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="@dimen/text_left_margin"
                    android:paddingRight="@dimen/text_right_margin"
                    android:background="@color/color_background_white"
                    android:gravity="center_vertical">
                <Button
                        android:text="@string/help"
                        android:textSize="@dimen/text_size_button_primary"
                        android:textAlignment="viewStart"
                        android:layout_gravity="start"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/color_background_white"
                        android:id="@+id/help_jump"/>
            </LinearLayout>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:srcCompat="@color/color_background_light_pink"
                    android:id="@+id/line"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_background_white"
                    android:paddingLeft="@dimen/text_left_margin"
                    android:paddingRight="@dimen/text_right_margin"
                    android:gravity="center_vertical">
                <Button
                        android:text="@string/advice"
                        android:textSize="@dimen/text_size_button_primary"
                        android:textAlignment="viewStart"
                        android:layout_gravity="start"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/color_background_white"
                        android:id="@+id/advice_jump"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <!--
    <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_background_toolbar"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/personalPageToolbar"
            />
-->
</RelativeLayout>
