<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_user_information"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.quickcanteen.quickcanteen.activities.userinformation.UserInformation">
    <include layout="@layout/top_toolbar"
             android:id="@+id/top_toolbar"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/top_toolbar"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:id="@+id/userInfoProgressBar"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1"
            android:background="@color/color_background_light_pink"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_below="@+id/top_toolbar">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:background="@color/color_background_white">
            <TextView
                    android:text="@string/user_portrait"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_primary"
                    android:textColor="@color/color_text_black"
                    android:paddingLeft="@dimen/text_left_margin"
                    android:paddingTop="@dimen/text_top_margin"
                    android:paddingBottom="@dimen/text_bottom_margin"
                    android:paddingRight="@dimen/text_right_margin"
                    android:id="@+id/userProtrait" android:layout_weight="1"/>
            <ImageButton
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:paddingLeft="@dimen/text_left_margin"
                    android:paddingTop="@dimen/text_top_margin"
                    android:paddingBottom="@dimen/text_bottom_margin"
                    android:paddingRight="@dimen/text_right_margin"
                    android:id="@+id/portrait_jump"
                    android:background="@drawable/white"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="2dp"
                android:background="@color/color_background_white">
            <TextView
                    android:text="@string/user_name"
                    android:textSize="@dimen/text_size_primary"
                    android:textColor="@color/color_text_black"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/text_left_margin"
                    android:paddingTop="@dimen/text_top_margin"
                    android:paddingBottom="@dimen/text_bottom_margin"
                    android:paddingRight="@dimen/text_right_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/name"/>
            <TextView
                    android:text="RealName"
                    android:textSize="@dimen/text_size_primary"
                    android:textColor="@color/color_text_gray"
                    android:gravity="right"
                    android:paddingLeft="@dimen/text_left_margin"
                    android:paddingTop="@dimen/text_top_margin"
                    android:paddingBottom="@dimen/text_bottom_margin"
                    android:paddingRight="@dimen/text_right_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/userName"
                    android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="2dp"
                android:background="@color/color_background_white">
            <TextView
                    android:text="@string/user_school"
                    android:textSize="@dimen/text_size_primary"
                    android:textColor="@color/color_text_black"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/text_left_margin"
                    android:paddingTop="@dimen/text_top_margin"
                    android:paddingBottom="@dimen/text_bottom_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/school"
                    android:layout_weight="1"/>
            <TextView
                    android:text="Major"
                    android:textSize="@dimen/text_size_primary"
                    android:textColor="@color/color_text_gray"
                    android:gravity="right"
                    android:paddingLeft="@dimen/text_left_margin"
                    android:paddingTop="@dimen/text_top_margin"
                    android:paddingBottom="@dimen/text_bottom_margin"
                    android:paddingRight="@dimen/text_right_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/userMajor"
                    android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="2dp"
                android:background="@color/color_background_white">
            <TextView
                    android:text="@string/user_id"
                    android:textSize="@dimen/text_size_primary"
                    android:textColor="@color/color_text_black"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/text_left_margin"
                    android:paddingTop="@dimen/text_top_margin"
                    android:paddingBottom="@dimen/text_bottom_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/id"
                    android:layout_weight="1"/>
            <TextView
                    android:text="ID"
                    android:textSize="@dimen/text_size_primary"
                    android:textColor="@color/color_text_gray"
                    android:gravity="right"
                    android:paddingLeft="@dimen/text_left_margin"
                    android:paddingTop="@dimen/text_top_margin"
                    android:paddingBottom="@dimen/text_bottom_margin"
                    android:paddingRight="@dimen/text_right_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/userId"
                    android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="2dp"
                android:background="@color/color_background_white">
            <TextView
                    android:text="@string/user_telephone"
                    android:textSize="@dimen/text_size_primary"
                    android:textColor="@color/color_text_black"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/text_left_margin"
                    android:paddingTop="@dimen/text_top_margin"
                    android:paddingBottom="@dimen/text_bottom_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/email"
                    android:layout_weight="1"/>
            <TextView
                    android:text="Telephone"
                    android:textSize="@dimen/text_size_primary"
                    android:textColor="@color/blue"
                    android:gravity="right"
                    android:paddingLeft="@dimen/text_left_margin"
                    android:paddingTop="@dimen/text_top_margin"
                    android:paddingBottom="@dimen/text_bottom_margin"
                    android:paddingRight="@dimen/text_right_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/userTel"
                    android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_background_white"
                android:gravity="center_vertical"
                android:layout_marginTop="2dp">
            <Button
                    android:text="修改密码"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editPwd"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:textColor="@color/color_text_black"
                    android:gravity="left"
                    android:paddingLeft="@dimen/text_left_margin"
                    android:paddingTop="13dp"
                    android:paddingBottom="@dimen/text_bottom_margin"
                    android:paddingRight="@dimen/text_right_margin"
                    android:textSize="@dimen/text_size_button_primary"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_background_white"
                android:gravity="center_vertical"
                android:layout_marginTop="2dp">
            <Button
                    android:text="管理收货地址"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/location"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:textColor="@color/color_text_black"
                    android:gravity="left"
                    android:paddingLeft="@dimen/text_left_margin"
                    android:paddingTop="13dp"
                    android:paddingBottom="@dimen/text_bottom_margin"
                    android:paddingRight="@dimen/text_right_margin"
                    android:textSize="@dimen/text_size_button_primary"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_background_white"
                android:gravity="center_vertical"
                android:layout_marginTop="2dp">
            <Button
                    android:text="申报配送员"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/signUpForDeliver"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:textColor="@color/color_text_black"
                    android:gravity="left"
                    android:paddingLeft="@dimen/text_left_margin"
                    android:paddingTop="13dp"
                    android:paddingBottom="@dimen/text_bottom_margin"
                    android:paddingRight="@dimen/text_right_margin"
                    android:textSize="@dimen/text_size_button_primary"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/color_background_white">
            <Button
                    android:text="@string/exit"
                    android:textSize="@dimen/text_size_exit"
                    android:textColor="@color/color_personal_information_exit"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/exit"
                    android:elevation="0dp" android:textAlignment="center"
                    android:layout_weight="1" android:background="@drawable/button_exit"/>
        </LinearLayout>
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp" app:srcCompat="@drawable/food" android:id="@+id/imgFood3"/>
    </LinearLayout>
</RelativeLayout>
